[project]
name = "deepseek-vision-mcp"
version = "1.0.0"
description = "MCP Server wrapping DeepSeek web chat's native multimodal vision model"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "QQ虾", email = "qqshrimp@example.com" },
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "curl-cffi==0.8.1b9",
    "pydantic>=2.0",
    "Pillow>=10.0",
    "wasmtime>=20.0.0",
    "numpy>=1.24.0",
    "anyio>=4.0",
]

[project.scripts]
deepseek-vision-mcp = "deepseek_vision_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
